wp/wp-content/themes/roots/assets/css/base.css
/* ... */
body{
  font-family: 'Open Sans', sans-serif;
  font-size: 14px;
  line-height: 2em;
  color:#333333;
  padding-top:0;
}

body.page{
  padding-top:115px;
}


::selection {
    background: #ffaea4;
    color: #ffffff;
}

::-moz-selection {
    background: #ffaea4;
    color: #ffffff;
}

h1 {
  font-family:'Arvo', serif;
  font-weight:normal;
  font-size: 4.286em;
  line-height:1.15em;
  letter-spacing: -0.018em;
  margin: 0 0 0.4em 0;
}

h2, h3, h4, h5 {
  font-family: 'Open Sans', sans-serif;
  font-weight:normal;
}

h2{
  font-size:2em;
  font-weight:100;
  line-height: 1.571em;
}

a{
  color:#FF3818;
  text-decoration: underline;
}

a [class^="icon-"], a [class*=" icon-"], a i{
  text-decoration: none;
}

i.icon-white{
  color:white;
}

i.icon-orange {
  color:#FF3818;
}


a:hover{
  color:#888;
  text-decoration: none;
}

a:active,
a:focus { outline: none!important }


h4 {
  font-size:26px;
  line-height:38px;
  margin:0 0 20px;
}

/* GLOBAL ELEMENTS */

.modal {
  width: 590px;
  height: 600px;
  margin:-300px 0 0 -295px; 
}

.content-block {
  padding:65px 0;
}

.larger-type {
  font-size:20px;
  margin:0 0 20px;
}

.container-fluid{
  padding:0 5%;

}

/*.container-fluid .row-fluid{
    max-width:1200px;
    margin-left: auto;
    margin-right: auto;
}

/*.row .new-line{
  clear:both;
  margin-left:0;
}

.row .offset3.new-line{
  margin-left:25.5319148936%;
}*/

/* HEADER / NAV */

.navbar{
  padding-bottom:35px;
  height:80px;
}

.navbar .right{
  float:right;
}
.navbar-fixed-top .navbar-inner, .navbar-fixed-bottom .navbar-inner {
    border:none;
}
.navbar-inner{
  background-color:#FF3818;
  background-image:none;
  filter:none;
  color:#fff;
  border-bottom: solid 2px #ffffff;
  -moz-box-shadow: 0px 4px 0px #f3f3f3;
  -webkit-box-shadow:  0px 4px 0px #f3f3f3;
    box-shadow:  0px 4px 0px #f3f3f3;
  padding-left:0;
  padding-right:0;
}
.navbar .container{
  position:relative;
}

#nav-main {
    float:right;
    clear:right;
}
.navbar i{
  vertical-align:baseline;
}

.navbar .brand{
  padding:0.5em 0;
  margin:0 0 0 0;
  width:228px;
}
.navbar .nav{
  margin:0;
  float: right;
  overflow: hidden;
}


.navbar .nav > li {
line-height: 2em
}

.navbar .nav > li > a{

  color:#fff;
  font-size:20px;
  font-style:italic;

  padding:0 3px;
  margin:0 0 0 25px;
  text-shadow:none;
}

.navbar .nav > li > a:hover{
  color:#fcb8ab;
    border-bottom:2px solid #fcb8ab;
}
  /* overwrite bootstrap */
.navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > li > a:focus{
  
  background-color: transparent;

  color: #fcb8ab;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}

.navbar .contact{
  float:right;
  padding-top:0.4em;
}

.navbar .contact p{
  display:inline;
}

.navbar .contact a{
  color:#fff;
  text-decoration: none;
}

.navbar .contact a:hover{
  color:#fcb8ab;
  text-decoration: none;
}



  .navbar .contact i{
    margin-top:1px;
  }

  .navbar .email i{
    margin-right:3px;
  }

  .navbar .follow img{
    padding-bottom:3px;
  }

  .navbar .follow{
    /*padding-right:1.5em;*/
    padding-right:0;
  }

  .navbar .follow img{
    margin-right:4px;
  }

  .navbar .nomination-link {
      padding-right: 1.5em;
  }

#nomination-form .modal-header{
  height:20px;
}

#nomination-form iframe{
  padding-left:10px;
}

/* Shared styles */

  .interview-number{
    background:#FF3818;
    float:left;
    font-family:'Arvo', serif;
    color:white;
    font-weight:100;
    text-align:center;
    line-height:1em;
    /*padding:0.5em 0.8em 0.5em 0.75em;*/
    border-radius: 50%;
    font-style:italic;
  }

  p.author strong{
    font-family: 'Arvo', serif;
  }

/* Page Header */

.page-header {
  margin: 0 0 0 20px;
  border-bottom: none;
}

article.type-post{
  padding-top: 110px;
}

/* Footer */

footer{
  background:#222222;
  padding:0 0 5px;
  margin-top:55px;

}

  #teasers .span4, #teasers #byline-teaser{
    background:#f3f3f3;
    margin-top:5em;
  }

  #teasers #byline-teaser{
    display:none;
  }
  
  #teasers a{
    text-decoration: none;
  }

  #teasers h3{
    color:#FF3818;
    text-align: center;
    line-height: 1em;
    font-family: 'Blanch Condensed', sans-serif;
    font-size: 2em;
    margin:5px 0;
    font-weight: 100;
  }

  .teaser-block{
   width:96%;
   padding:0 2% 2% 2%;
   position:relative;
  }

  .teaser-block > img, .teaser-block #subscribe{
    width:100%;
    height:185px;
  }

  #subscribe{
    background: #dedddd;
  }

  #subscribe input[type=email], #subscribe input[type=text]{
    box-shadow:none;
    -moz-border-box:none;
    -webkit-border-box:none;
    border:none;
    border-radius:0;
    -moz-border-radius:0;
    -webkit-border-radius:0;
    font-size:32px;
    height:inherit;
    width:inherit;
    padding:0;
    margin:0;
    background-color: #dedddd;
    border-left:1px solid #888888;
    padding-top:1px;
    margin-left:10px;
    line-height:1;
    color:#FF3818;
    width:75%;
    font-weight:200;
  }
  
  #subscribe input::-webkit-input-placeholder{
    font-style:italic;
  }
  #subscribe input:-moz-placeholder{
    font-style:italic;
  }
  
  #subscribe .mc-field-group{
    border-bottom:1px solid #888;
    padding-top:20px;
    padding-left:10px;
  }
  
  #subscribe label{
    display:inline-block;
    margin-bottom:15px;
  }

  #subscribe #placeholder{
    font-size:1.5em;
    font-style: italic;
    padding-left: 10px;
    padding-top:10px;
  }
  
  #subscribe input[type=submit]{
    font-family: 'Open Sans', sans-serif;
    background-color:#fcb8ab;
    border:none;
    font-weight:600;
    font-size:1.2em;
    padding:13px 5px;
    width:35%;
    position:absolute;
    right:15px;
    bottom:17px;
    text-align:center;
    color:#fff;
    text-transform:uppercase;
    line-height:1;
    transition-property:linear 0.2s;
    -moz-transition:linear 0.2s;
    -webkit-transition:linear 0.2s;
    -o-transition:linear 0.2s;
  
  }

  footer p{
    margin-bottom:0;
  }
/* ... */

